--- a/style.css
+++ b/style.css
@@ -1,63 +1,64 @@
 * {
- margin: 0;
- padding: 0;
- box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 a {
- text-decoration: none;
- color: #5F6368;
- font-weight: bold;
+  text-decoration: none;
+  color: #5F6368;
+  font-weight: bold;
 }
 
 a:hover, a:active, a:focus {
- color: #3F70D7;
- text-decoration: underline;
+  color: #3F70D7;
+  text-decoration: underline;
 }
 
 a.active {
- color: #3F70D7;
- text-decoration: underline;
+  color: #3F70D7;
+  text-decoration: underline;
 }
 
 .left {
- float: left;
+  float: left;
 }
 
 .right {
- float: right;
+  float: right;
 }
 
 .list-inline {
- list-style: none;
+  list-style: none;
 }
 
 .list-inline li {
- display: inline-block;
- padding-right: 20px;
+  display: inline-block;
+  padding-right: 20px;
 }
 
 body {
- font-family: 'Roboto';
- font-size: 16px;
- color: #5F6368;
+  width: 100%;
+  font-family: 'Roboto';
+  font-size: 16px;
+  color: #5F6368;
 }
 
 header {
- padding: 20px;
- border-bottom: 1px solid  #5F6368;
+  padding: 20px;
+  border-bottom: 1px solid  #5F6368;
 }
 
 .header-top {
- margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .header-top img {
- vertical-align: middle;
+  vertical-align: middle;
 }
 
 .header-bottom::after {
- content: '';
- display: table;
- clear: both;
+  content: '';
+  display: table;
+  clear: both;
 }
